ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_binop_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (8) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (9) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (10) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (16) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (17) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (18) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (19) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (20) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (21) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (27) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (32) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (33) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (34) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (35) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (36) at (2, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {BinOp(2, 0, 1)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {BinOp(2, 1, 0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->] (0) edge (0);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (2) edge (3);
		\path[->] (3) edge (15);
		\path[->] (0) edge (8);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (2) edge (3);
		\path[->] (3) edge (15);
		\path[->] (8) edge (9);
		\path[->] (9) edge (18);
		\path[->] (9) edge (10);
		\path[->] (10) edge (20);
		\path[->] (10) edge (21);


                \end{tikzpicture}
            \end{document}
