ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_chain_assign_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (8) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (9) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (10) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (11) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (17) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (18) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (19) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (20) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%3$] (21) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (22) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (23) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (30) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (32) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (35) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (36) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (37) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%3$] (38) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (39) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (40) at (3, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(2, 0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(3, 2)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->] (0) edge (0);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (2) edge (3);
		\path[->] (3) edge (16);
		\path[->] (0) edge (1);
		\path[->] (0) edge (8);
		\path[->] (0) edge (1);
		\path[->] (0) edge (1);
		\path[->] (1) edge (2);
		\path[->] (1) edge (2);
		\path[->] (2) edge (3);
		\path[->] (2) edge (3);
		\path[->] (3) edge (16);
		\path[->] (3) edge (16);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (9) edge (11);
		\path[->] (10) edge (21);
		\path[->] (10) edge (22);
		\path[->] (11) edge (23);


                \end{tikzpicture}
            \end{document}
