ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_double_const_with_params_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (9) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(2, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(2, 1)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (0) edge (9);
		\path[->] (0) edge (10);
		\path[->] (5) edge (11);


                \end{tikzpicture}
            \end{document}
