ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_early_return_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (1) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (22) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (26) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (35) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (36) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (37) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (38) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (47) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%1$] (48) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (49) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%3$] (50) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (52) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (53) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (54) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (55) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (56) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (57) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (58) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (59) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (60) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (61) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (76) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (77) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (78) at (4, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytestfoo, [0], [2])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Call(mytestfoo, [0], [3])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (3) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (6) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (18) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (32) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (43) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (44) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (45) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (51) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (66) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (67) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (68) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (69) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (70) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (71) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (82) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (83) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (84) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (85) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (86) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (87) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (88) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (89) at (6, 2) { };
\node[font=\tiny] (note_7) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_9) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_10) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_14) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_15) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_16) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_17) at (4.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (4) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (21) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (39) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (40) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (41) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (42) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (46) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (62) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (63) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (64) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (65) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (72) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (73) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (74) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (75) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (79) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (80) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (81) at (10, 3) { };
\node[font=\tiny] (note_4) at (8.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_5) at (8.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (8.5, 2.5) {Return([1])};
\node[font=\tiny] (note_11) at (8.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_12) at (8.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_13) at (8.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (37);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (13);
		\path[->, blue] (2) [bend right] edge  node { } (14);
		\path[->, blue] (2) [bend right] edge  node { } (42);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (3) [bend right] edge  node { } (16);
		\path[->, blue] (3) [bend right] edge  node { } (45);
		\path[->, blue] (4) [loop right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (48);
		\path[->, blue] (0) [bend right] edge  node { } (49);
		\path[->, blue] (0) [bend right] edge  node { } (50);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (53);
		\path[->] (0) edge (0);
		\path[->] (0) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (10) edge (37);
		\path[->] (0) edge (8);
		\path[->] (0) edge (22);
		\path[->] (0) edge (8);
		\path[->] (0) edge (8);
		\path[->] (2) edge (2);
		\path[->] (2) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (42);
		\path[->] (3) edge (3);
		\path[->] (3) edge (16);
		\path[->] (16) edge (45);
		\path[->] (3) edge (3);
		\path[->] (3) edge (16);
		\path[->] (16) edge (45);
		\path[->] (2) edge (2);
		\path[->] (2) edge (13);
		\path[->] (13) edge (14);
		\path[->] (14) edge (42);
		\path[->] (22) edge node { } (26);
		\path[->] (2) edge (13);
		\path[->] (2) edge (13);
		\path[->] (13) edge (14);
		\path[->] (13) edge (14);
		\path[->] (13) edge (14);
		\path[->] (14) edge (42);
		\path[->] (14) edge (42);
		\path[->] (14) edge (42);
		\path[->] (3) edge (16);
		\path[->] (3) edge (16);
		\path[->] (16) edge (45);
		\path[->] (16) edge (45);
		\path[->] (16) edge (45);
		\path[->] (3) edge (3);
		\path[->] (3) edge (16);
		\path[->] (16) edge (45);
		\path[->] (26) edge node { } (1);
		\path[->] (3) edge (3);
		\path[->] (3) edge (16);
		\path[->] (16) edge (45);
		\path[->] (1) edge node { } (53);


                \end{tikzpicture}
            \end{document}
